--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-header,
-main {
+body {
+    background-image: url("background1.gif");
+    background-size: cover;
+    background-attachment: fixed;
+}
+body, main {
 	margin: 0 auto;
 	text-align: center;
 }
@@ -45,7 +49,13 @@ canvas {
 	background-color: #f1f1f1;
 }
 
+header {
+    width: 600px; 
+    margin: 0 auto;
+}
+
 h1 {
     font-family: "Dokdo";
     font-size: 40px;
+    background-color: white;
 }
